Add GetCookiesExample() method Add SetCookiesExample() method Give response in login through cookies --solved Get cookies from client after first log in --solved