@@ -3,9 +3,13 @@ package org.example.Controller;
 import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
 import org.example.Auth.JWTtoken;
+import org.example.Test.Test;
 
 import java.io.IOException;
 import java.io.OutputStream;
+import java.net.HttpCookie;
+import java.util.List;
+import java.util.Map;
 
 public class loginHandler implements HttpHandler {
     private static final int TokenLifeSpanMinutes = 10;
@@ -15,13 +19,19 @@ public class loginHandler implements HttpHandler {
         //System.out.println( "c'mon " + exchange.getRequestHeaders().get("Authorization").getLast()); //Basic YWRtaW46MTIzNA==
         //System.out.println( "d'mon " +exchange.getRequestHeaders().get("Authorization").get(0).split(" ")[1] );; //Basic YWRtaW46MTIzNA==
 
+        loginHandler loginHandler = new loginHandler() ;
+
+
         String response = null;
         try {
-            String Base64EncodedCredentials = exchange.getRequestHeaders().get("Authorization").get(0).split(" ")[1]; //todo
-            //String Base64EncodedCredentials = exchange.getRequestHeaders().get("Authorization").getFirst(); //todo
+            //creating a JWT token
+            String Base64EncodedCredentials = exchange.getRequestHeaders().get("Authorization").get(0).split(" ")[1]; //todo done
+            //String Base64EncodedCredentials = exchange.getRequestHeaders().get("Authorization").getFirst(); //todo done
 
             JWTtoken tmp = new JWTtoken(Base64EncodedCredentials, TokenLifeSpanMinutes);
-            response = tmp.toString();
+            response = "JWT Token created successfully" ;
+            loginHandler.SetCookiesExample(exchange ,  tmp.toString() ); // Token is passed through cookies rather response
+         //   response = "Token Created Successfully" ;
         } catch (Exception e) {
             System.out.println("JWT token creation error: " + e);
             throw new RuntimeException(e);
@@ -43,19 +53,10 @@ public class loginHandler implements HttpHandler {
     }
 
     public static boolean isAuthenticated(HttpExchange t) throws IOException {
+
+        loginHandler loginHandler = new loginHandler() ;
+        String tokenString = loginHandler.GetCookiesExample(t); // Token catched from cookies rather headers
         boolean valid = true;
-        var keys = t.getRequestHeaders();
-
-       // System.out.println( "amar bhul " + keys.get("Authorization").getFirst());
-
-        if (!keys.containsKey("Authorization")) valid = false;
-
-        String tokenString = "";
-        if (valid){
-            tokenString = validateAndGetToken(keys.get("Authorization").get(0));//TODO
-          //  tokenString = validateAndGetToken(keys.get("Authorization").getFirst() );//TODO
-        }
-
         if (tokenString.isEmpty()) valid = false;
 
         if (valid) {
@@ -82,5 +83,35 @@ public class loginHandler implements HttpHandler {
         }
 
         return valid;
+    }
+
+    public void SetCookiesExample( HttpExchange exchange , String value ) {
+        HttpCookie cookie = new HttpCookie("Token", value);
+        cookie.setDomain("localhost");
+        cookie.setPath("/");
+
+        // Add the cookie to the response headers
+        exchange.getResponseHeaders().add("Set-Cookie", cookie.toString());
+    }
+
+    public String GetCookiesExample( HttpExchange exchange) {
+        // Create a CookieManager
+        Map<String, List<String>> headers = exchange.getRequestHeaders();
+        List<String> cookieHeaders = headers.get("Cookie");
+
+        StringBuffer token = new StringBuffer();
+
+        // Process each cookie header
+        if (cookieHeaders != null) {
+            for (String cookieHeader : cookieHeaders) {
+                List<HttpCookie> cookies = HttpCookie.parse(cookieHeader);
+
+                // Process each cookie
+                for (HttpCookie cookie : cookies) {
+                    token.append(cookie.getValue()) ;
+                }
+            }
+        }
+        return token.toString() ;
     }
 }
